# yc-supabase-select-hackathon

./: .gitignore  CLAUDE.md  README.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: campaign-creation.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/campaigns/: route.ts
frontend/app/api/campaigns/[id]/status/: route.ts
frontend/components/: campaign-dashboard.tsx  campaign-modal.tsx  database-searching-animation.tsx  email-detail-modal.tsx  email-generation-animation.tsx  email-sending-animation.tsx  typing-animation.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
frontend/lib/: icons.ts  utils.ts
frontend/types/: campaign.ts
