[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Supabase integration"
readme = "AGENTS.md"
authors = [{ name = "YC Supabase Hackathon Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "resend",
    "sqlmodel",
    "psycopg[binary]",
    "uvicorn[standard]",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "AGENTS.md"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx"
]
